--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <script>
       // YOU DO NOT NEED TO EDIT THIS CODE
       if (!/(&|\?)username=/.test(window.location.search)) {
@@ -27,6 +28,15 @@
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
     </div>
+    <div>
+      <select id="roomSelect"> 
+      </select>
+      <form id="send">
+        Message: <input type="text" id="message"><br>
+        <input class="submit" type="submit" value="submit">
+      </form>
+    </div>
     <div id="chats"></div>
+  
   </body>
 </html>
