POST, GET, populate room list, render chats

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
       </select>
       <form id="send">
         Message: <input type="text" id="message"><br>
+        Room: <input type="text" id="room"><br>
         <input class="submit" type="submit" value="submit">
       </form>
     </div>
