Create and select new rooms

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,9 @@
       <!-- Your HTML goes here! -->
     </div>
     <div>
-      <select id="roomSelect"> 
+      <select id="roomSelect">
+        <option class="default" selected="selected">lobby</option>
+        <option class="default">Add room</option> 
       </select>
       <form id="send">
         Message: <input type="text" id="message"><br>
