Hard coded initial room options

--- a/client/index.html
+++ b/client/index.html
@@ -35,9 +35,9 @@
         <option class="default">Add room</option> 
       </select>
       <form id="send">
-        Message: <input type="text" id="message"><br>
-        Room: <input type="text" id="room"><br>
-        <input class="submit" type="submit" value="submit">
+        <input type="text" id="message"><br>
+        <input class="submit" type="submit" value="Submit message">
+<!--         Room: <input type="text" id="room"><br> -->
       </form>
     </div>
     <div id="chats"></div>
